k8s/api-server-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: exosphere-api-server
spec:
  type: ClusterIP
  selector:
    app: exosphere-api-server
  ports:
    - port: 80
      targetPort: 8000
      protocol: TCP
