k8s/landing-page-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: exosphere-landing-page
spec:
  type: ClusterIP
  selector:
    app: exosphere-landing-page
  ports:
    - port: 80
      targetPort: 3000
      protocol: TCP
